--- a/src/test.html
+++ b/src/test.html
@@ -6,54 +6,55 @@
   <title>test</title>
 </head>
 <body>
-  <script src="./Promise.js"></script>
+  <script src="./Promise_class.js"></script>
   <script>
-  // const promise = new Promise((resolve, reject) => {
-  //   setTimeout(() => {
-  //     // resolve('success')
-  //     reject('error')
-  //     // 先执行才能说明是异步
-  //     // console.log('pending => resolved')
-  //   })
-  // }).then(
-  //   value => {
-  //     console.log('onresolved1', value)
-  //     // return 'success1'
-  //   },
-  //   reason => {
-  //     console.log('onrejected1', reason)
-  //     // throw 'error2'
-  //     return new Promise((resolve, reject) => reject('error2'))
-  //   }
-  // ).then(
-  //   value => {
-  //     console.log('onresolved2', value)
-  //   },
-  //   reason => {
-  //     console.log('onrejected2', reason)
-  //     throw 'error3'
-  //   }
-  // ).catch(reason => {
-  //   console.log('onrejected3', reason)
-  //   return new Promise(() => {})  // 中断promise链
-  // }).then(
-  //   value => {
-  //     console.log('onresolved4', value)
-  //   },
-  //   reason => {
-  //     console.log('onrejected4', reason)
-  //     // throw 'error3'
-  //   }
-  // )
+  const promise = new Promise((resolve, reject) => {
+    setTimeout(() => {
+      resolve('success')
+      // reject('error')
+      // 先执行才能说明是异步
+      console.log('pending => resolved')
+    })
+  }).then(
+    value => {
+      console.log('onresolved1', value)
+      return 'success1'
+    },
+    reason => {
+      console.log('onrejected1', reason)
+      throw 'error2'
+      return new Promise((resolve, reject) => reject('error2'))
+    }
+  ).then(
+    value => {
+      console.log('onresolved2', value)
+    },
+    reason => {
+      console.log('onrejected2', reason)
+      throw 'error3'
+    }
+  ).catch(reason => {
+    console.log('onrejected3', reason)
+    // return new Promise(() => {})  // 中断promise链
+  }).then(
+    value => {
+      console.log('onresolved4', value)
+      return 4
+    },
+    reason => {
+      console.log('onrejected4', reason)
+      throw 'error3'
+    }
+  )
   // const p1 = new Promise((resolve, reject) => {
-  //   setTimeout(() => {
-  //     resolve('ok1')
-  //   }, 1000);
-  //   // resolve('ok1')
+  //   // setTimeout(() => {
+  //   //   resolve('ok1')
+  //   // }, 1000);
+  //   resolve('ok1')
   // })
-  // const p2 = Promise.reject('ok2')
+  // const p2 = Promise.resolve('ok2')
   // const p3 = Promise.resolve(Promise.reject('ok3'))
-  // const pRace = Promise.race([p1, p3])
+  // const pRace = Promise.race([p1, p2])
   // pRace.then(
   //   values => {
   //     console.log('resolve', values)
@@ -65,24 +66,24 @@
   // p1.then(value => {console.log('p1', value)})
   // p2.then(value => {console.log('p2', value)})
   // p3.catch(reason => {console.log('p3', reason)})
-  let p1 = new Promise((resolve, reject) => {
-    setTimeout(() => {
-      resolve('success1');
-    }, 1000);
-  })
+  // let p1 = new Promise((resolve, reject) => {
+  //   setTimeout(() => {
+  //     resolve('success1');
+  //   }, 1000);
+  // })
 
-  let p2 = new Promise((resolve, reject) => {
-    setTimeout(() => {
-      reject('success2');
-    }, 1000);
-  })
+  // let p2 = new Promise((resolve, reject) => {
+  //   setTimeout(() => {
+  //     reject('success2');
+  //   }, 1000);
+  // })
 
-  Promise.all([1,2,3,p1]).then(
-    values => {
-    console.log('resolve', values);
-  }, reason => {
-    console.log('reject', reason);
-  })
+  // Promise.all([1,2,3,p1]).then(
+  //   values => {
+  //   console.log('resolve', values);
+  // }, reason => {
+  //   console.log('reject', reason);
+  // })
   </script>
 </body>
 </html>
